@@ -1,6 +1,7 @@
 hildon-home (0.3.5~unreleased) unstable; urgency=low
 
   * Only draw thumbnail icon if available. Fixes NB#96683
+  * Monitor bookmark configurations file. Fixes NB#95283
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 29 Dec 2008 15:46:33 +0200
 
